# RustNDKDemo

./: Cargo.toml
src/: lib.rs
