[package]
name = "rust_ndk_demo"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.20.0", default-features = false }

[lib]
name = "rust_ndk_demo"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
